--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
         "dev": "nodemon",
         "prestart": "npm run build",
         "start": "node dist/index.js",
-        "build": "rimraf dist && npx tsc"
+        "build": "rimraf dist && npx tsc",
+        "ts.check": "tsc --project tsconfig.json",
+        "add-build": "git add dist"
     },
+    "pre-commit": [
+        "ts.check",
+        "build",
+        "add-build"
+    ],
     "author": "",
     "license": "ISC",
     "dependencies": {
