--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,19 @@
     "compilerOptions": {
         "target": "es2016",
         "module": "CommonJS",
-        "outDir": "./dist",
+        "outDir": "dist",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
-        "skipLibCheck": true
-    }
+        "skipLibCheck": true,
+        "allowSyntheticDefaultImports": true,
+        "noImplicitAny": true,
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "baseUrl": ".",
+        "paths": {
+            "*": ["node_modules/*", "src/types/*"]
+        }
+    },
+    "include": ["./src/**/*"]
 }
