added pre-commit dependencies

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@types/jsonwebtoken": "^9.0.5",
         "@types/node": "^20.11.19",
         "nodemon": "^3.0.3",
+        "pre-commit": "^1.2.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
     }
